# streaming-benchmark

./: streaming-benchmark.cabal  tmp-streaming.cabal
app/: Benchmark.hs  Main.hs  Tree.hs
app/Streaming/: Better.hs  Bind.hs  Codensity.hs
