cabal-version:      2.4
name:               tmp-streaming
version:            0

executable tmp-streaming
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, clock, streaming, temporary, transformers, streamly, pipes, conduit
    hs-source-dirs:   app
    other-modules:    Benchmark, Tree, Streaming.Better
    default-language: Haskell2010
    ghc-options:      -Wall -O2
